# matrufsc-crawler

./: README.md  pyproject.toml
cagr_crawler/: crawler.py
matrufsc_crawler/: __init__.py  __main__.py
