[tool.poetry]
name = "matrufsc-crawler"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
matrufsc-crawler = "matrufsc_crawler.__main__:main"
