[tool.poetry]
name = "matrufsc-crawler"
version = "0.1.0"
description = ""
authors = ["Cauê Baasch de Souza <cauebs@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5.4"
beautifulsoup4 = "^4.7.1"
yarl = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7.8"
mypy = "^0.720"

[tool.poetry.scripts]
matrufsc-crawler = "matrufsc_crawler.__main__:main"
