[tool.poetry]
name = "matrufsc-crawler"
version = "0.2.0"
description = ""
authors = [
    "Cauê Baasch de Souza <cauebs@pm.me>",
    "Artur Barichello <artur@barichello.me>"
]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5.4"
beautifulsoup4 = "^4.7.1"
yarl = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8 = "^3.7.8"
mypy = "^0.720"

[tool.poetry.scripts]
matrufsc-crawler = "matrufsc_crawler.__main__:main"
